# laser_segmentation

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  codecov.yml  package.xml
.github/: repos.repos
.github/workflows/: build.yml
include/laser_segmentation/: laserSegmentation.hpp  laser_segmentation.hpp  parameter_handler.hpp  parula.hpp  scanToPointTypeAdapter.hpp
include/laser_segmentation/segmentation/: jump_distance.hpp  jump_distance_merge.hpp  segmentation.hpp  segmentationJumpDistance.hpp  segmentationJumpDistanceMerge.hpp
launch/: segmentation.launch.py
params/: close_steps_detect.yml  default_params.yml
src/: laserSegmentation.cpp  laser_segmentation.cpp  main.cpp  parameter_handler.cpp
src/segmentation/: jump_distance.cpp  jump_distance_merge.cpp  segmentationJumpDistance.cpp  segmentationJumpDistanceMerge.cpp
test/: CMakeLists.txt  test_integration.cpp  test_laser_segmentation.cpp  test_segmentations.cpp
