<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_segmentation</name>
  <version>3.0.3</version>
  <description>Implementation of algorithms for segmentation of laserscans.</description>
  <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
  <maintainer email="manolofc@gmail.com">Manuel Fernandez-Carmona</maintainer>
  <license>Apache-2.0</license>
  <author email="ajtudela@gmail.com">Alberto Tudela</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>slg_msgs</depend>  <!-- formerly simple_laser_geometry -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
